--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 <br>
 <div class="error"></div>
 <div class="result"></div>
-    <script defer src="app.js"></script>
+    <script defer src="/src/app.js"></script>
 </body>
 </html>
