feat: add styles tag for validation classes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .success {
+    color: green;
+}
+
+        .error {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <h1>Witaj w module walidacji karty razem z Opanuj JS!</h1>
